MDEV-7908: assertion in innobase_release_savepoint

Problem was that in XA prepared state we should still be able to
release a savepoint, but assertions were too strict.